Changes from jTDS 0.9
=========================

12/01/2004 - Alin Sinpalean
 o Applied patch [1076337] Elimination of ColData class. Thanks a lot, Mike for
   all the effort!
 o Applied patch [1076383] ResultSetMetaData for more complex statements for
   SQL Server.

11/30/2004 - Alin Sinpalean
 o Corrected bug [1075977] setObject() causes SQLException.

11/29/2004 - Alin Sinpalean
 o Fixed some NPEs caused by the new per column collation support.
 o Applied Mike's fix for [1074356] TDS 4/5 Login fails with latest CVS code.
 o Applied Mike's fix for [1074096] Incorrect data type determine on dataset
   meta data.
 o Implemented support for reading character data using per column collations
   for SQL Server 2000.

11/26/2004 - Alin Sinpalean
 o Corrected a bug which was causing Statement.setMaxRows() to not work with
   cursor-based ResultSets.

11/24/2004 - Alin Sinpalean
 o Extracted getConnection(callerReference) out of BlobImpl and ClobImpl and
   moved it to Support.
 o Created the CharsetInfo class to hold both information about a character set
   (non-static fields) and provide support for loading and retrieving character
   sets (static fields and methods; the logic was moved from Support).
 o Added comments to highlight possible problem areas with multi-byte character
   sets.
 o Started adding support for SQL Server 2000 per column collations.
 o Other minor cleanups.

11/23/2004 - Alin Sinpalean
 o Corrected bug [1071397] Error in prepared statement (parameters in outer
   join escapes are not recognized).

11/19/2004 - Alin Sinpalean
 o Replaced the ColData copy constructor with clone().
 o Added tests to ensure Blob.getBytes(0, length) and Clob.getSubString(0,
   length) fail.

11/18/2004 - Alin Sinpalean
 o More performance improvements: instead of creating new ParamInfo instances
   for each sp_XXX call, the same objects are reused both for fixed parameters
   (optype, fetchtype etc.) and updated column values; also, for addBatch() the